# vio-cj

camera_model/: CMakeLists.txt
config/test/: euroc_config.yaml  pinhole.yaml  test.yaml
slam/: CMakeLists.txt
slam/src/common/: common_include.cpp  common_include.h  config.cpp  config.h  tic_toc.h
slam/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp  projection_td_factor.h
slam/src/feature/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  feature_tracker_node.h
slam/src/initial/: initial_alignment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
slam/src/system/: data.cpp  data.h  system.cpp  system.h
slam/src/test/: main.cpp
slam/src/track/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  tracking.cpp  tracking.h
slam/src/utility/: utility.cpp  utility.h
